--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>ID:</strong>
+  <%= @customer.id %>
+</p>
+
+<p>
   <strong>Email:</strong>
   <%= @customer.email %>
 </p>
@@ -10,10 +15,6 @@
   <%= @customer.password %>
 </p>
 
-<p>
-  <strong>String:</strong>
-  <%= @customer.string %>
-</p>
 
 <p>
   <strong>Phone number:</strong>
