added some css/ created collections js

--- a/app/assets/stylesheets/_bootstrap-includes.scss
+++ b/app/assets/stylesheets/_bootstrap-includes.scss
@@ -3,8 +3,14 @@
 
 nav a {
   display: inline-block;
-  font-size: 20px;
+  font-size: 15px;
 }
 nav {
   text-align: right;
+}
+
+.container {
+  max-width: 960px;
+  margin :0 auto;
+  margin-right: 50px;
 }
