--- a/app/views/users/index.html
+++ b/app/views/users/index.html
@@ -1,6 +1,8 @@
 <h1>ALL USERS TOP SECRET</h1>
-<% @users.each do |user| %>
-<p>
-  <%= user.email %> since <%= user.created_at %>
-</p>
-<% end %>
+<div class= "container">
+    <% @users.each do |user| %>
+    <p>
+      <%= user.email %> since <%= user.created_at %>
+    </p>
+    <% end %>
+<div>
