--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CoffeeRun</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <nav>
-    <%= link_to 'Home', root_path %> |
-    <% if @current_user.present? %>
-     <% if @current_user.admin? %>
-     <%= link_to 'All Users', users_path %> |
-    <% end %>
-          <%= link_to "Logout #{@current_user.email}", login_path, :method => :delete %> |
-          <%= link_to "Edit Profile", edit_user_path(@current_user) %> |
-            <% else %>
-          <%= link_to "Sign up", signup_path %> |
-          <%= link_to "Login", login_path %>  
+    <head>
+        <title>CoffeeRun</title>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+        <%= csrf_meta_tags %>
+    </head>
+    <body>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="nav">
+                        <%= link_to 'Home', root_path %>
+                    </li>
+                    <% if @current_user.present? %>
+                    <% if @current_user.admin? %>
+                    <li class="nav">
+                        <%= link_to 'All Users', users_path %>
+                    </li>
+                    <% end %>
+                    <li class="nav"><%= link_to "Logout #{@current_user.email}", login_path, :method => :delete %>
+                    </li>
+                    <li class="nav"><%= link_to "Edit Profile", edit_user_path(@current_user) %>
+                    </li>
+                <% else %>
+                    <li class="nav">
+                        <%= link_to "Sign up", signup_path %>
+                    </li>
+                    <li class="nav"><%= link_to "Login", login_path %>
+                    </li>
+                    <% end %>
+                </ul>
+            </div>
+        </nav>
+
+        <% if flash[:error].present? %>
+        <h2>
+            class="error"
+            <%= flash[:error] %>
+        </h2>
         <% end %>
-       </nav>
+        <%= yield %>
 
-  <% if flash[:error].present? %>
-      <h2> class="error"
-       <%= flash[:error] %>
-      </h2>
-  <% end %>
-<%= yield %>
-
-</body>
+    </body>
 </html>
