--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,4 +1,5 @@
 <h2>Login</h2>
+<div class="container">
 <%= form_tag login_path do %>
   <%= label_tag :email %>
   <%= text_field_tag :email %>
@@ -8,3 +9,4 @@
 
   <%= submit_tag "Login"%>
 <% end %>
+<div>
