--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>EDIT USER</h1>
+<div class="container">
   <%= form_for @user do |f| %>
       <%= f.label :email %>
       <%= f.email_field :email %>
@@ -14,3 +15,4 @@
 
       <%= f.submit %>
   <% end %>
+  </div>
