--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Sign Up</h1>
+<div class="container">
 <% if @user.errors.any? %>
     <ol>
       <% @user.errors.full_messages.each do |msg| %>
@@ -6,7 +7,6 @@
       <% end %>
     </ol>
 <% end %>
-
 
 <%= form_for @user do |f| %>
     <%= f.label :email %>
@@ -19,3 +19,4 @@
     <%= f.password_field :password_confirmation, :required => true %>
     <%= f.submit "signup" %>
 <% end %>
+</div>
