basic store list view working

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,8 +17,8 @@
 
 <script type="text/template" id='StoreViewTemplate'>
     <li class='store'>
-    <p>Name: <%%= store.name %></p>
-    <p>Address: <%%= store.address %></p>
+    <p>Name: <%%= name %></p>
+    <p>Address: <%%= address %></p>
     </li>
 
 </script>
