--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,30 +7,34 @@
         <%= csrf_meta_tags %>
     </head>
     <body>
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="nav">
-                        <%= link_to 'Home', root_path %>
-                    </li>
-                    <% if @current_user.present? %>
-                    <% if @current_user.admin? %>
-                    <li class="nav">
-                        <%= link_to 'All Users', users_path %>
-                    </li>
-                    <% end %>
-                    <li class="nav"><%= link_to "Logout #{@current_user.email}", login_path, :method => :delete %>
-                    </li>
-                    <li class="nav"><%= link_to "Edit Profile", edit_user_path(@current_user) %>
-                    </li>
-                <% else %>
-                    <li class="nav">
-                        <%= link_to "Sign up", signup_path %>
-                    </li>
-                    <li class="nav"><%= link_to "Login", login_path %>
-                    </li>
-                    <% end %>
-                </ul>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <ul class="navbar-brand"><%= link_to 'Coffee-Run', root_path %></ul>
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav"></ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <% if @current_user.present? %>
+                        <% if @current_user.admin? %>
+                        <li><%= link_to 'All Users', users_path %></li>
+                        <% end %>
+                        <li><%= link_to "Logout #{@current_user.email}", login_path, :method => :delete %></li>
+                        <li><%= link_to "Edit Profile", edit_user_path(@current_user) %>
+                        </li>
+                    <% else %>
+                        <li><%= link_to "Sign up", signup_path %></li>
+                        <li><%= link_to "Login", login_path %></li>
+                        <% end %>
+                    </ul>
+                </div>
             </div>
         </nav>
 
@@ -41,6 +45,5 @@
         </h2>
         <% end %>
         <%= yield %>
-
     </body>
 </html>
