--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,3 @@
-<h1>Sign Up</h1>
 <div class="container">
 <% if @user.errors.any? %>
     <ol>
@@ -17,6 +16,6 @@
 
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, :required => true %>
-    <%= f.submit "signup" %>
+    <%= f.submit "Sign Up" %>
 <% end %>
 </div>
