menu view page loading

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,9 +16,10 @@
 
 
 <script type="text/template" id='StoreViewTemplate'>
-    <li class='store'>
+    <li class='store' id='<%%= id %>'>
     <p>Name: <%%= name %></p>
     <p>Address: <%%= address %></p>
+
     </li>
 
 </script>
@@ -34,6 +35,6 @@
 </script>
 
 <script type="text/template" id='MenuViewTemplate'>
-
+        <h1>Menu List View</h1>
 
 </script>
