--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,4 +37,6 @@
 <script type="text/template" id='MenuViewTemplate'>
         <h1>Menu List View</h1>
 
+        <h3>Store Name: <%%= name %></h3>
+
 </script>
