--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,8 +39,7 @@
         </nav>
 
         <% if flash[:error].present? %>
-        <h2>
-            class="error"
+        <h2 class="error">
             <%= flash[:error] %>
         </h2>
         <% end %>
