code for Orderviewlist

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,8 +30,7 @@
 </script>
 
 <script type="text/template" id='OrderListViewTemplate'>
-
-
+    <p>Total Price: <%%= total_price %></p>
 </script>
 
 <script type="text/template" id='MenuViewTemplate'>
