Fixed up all the Order views and got them to output

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,6 +30,9 @@
 </script>
 
 <script type="text/template" id='OrderListViewTemplate'>
+    <p>Store ID: <%%= store_id %></p>
+    <p>Customer ID: <%%= customer_id %></p>
+    <p>Runner ID: <%%= runner_id %></p>
     <p>Total Price: <%%= total_price %></p>
 </script>
 
