orders page now fully working i think...

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,7 +40,10 @@
         <h3>Store Name: <%%= name %></h3>
         <h3>Address: <%%= address %></h3>
 
+        <p>Total Price: $<span id='menu-total-price'>0.0</span></p>
+
         <ul id='items-list'></ul>
+        <button id=submit-order-btn>Submit</button>
 
 </script>
 
@@ -48,12 +51,12 @@
 
     <li class="item">
         <p>Name: <%%= name %></p>
-        <p>Price: <%%= price %></p>
+        <p>Price: $<%%= price %></p>
         <p>Description: <%%= description %></p>
         <button class='change-qty' id='-<%%= id %>'>-</button>
         <box class='item-qty' id='qty<%%= id %>'>0</box>
         <button class='change-qty' id='+<%%= id %>'>+</button>
-        <p>Total Price: </p>
+        <p>Total Price: $<span id='<%%= id %>-total-price'>0.0</span></p>
         <ul id='item-submenu-<%%= id %>'></ul>
     </li>
 
@@ -61,6 +64,28 @@
 </script>
 
 <script type="text/template" id='ItemSubmenuTemplate'>
-        <li class='submenu'>Sub Menu</li>
+        <li class='submenu'>
+            <%%= qty %>:
+            Specifications:
+            Size:
+            <select name="size" id='size<%%= id %><%%= qty %>'>
+                <option value="Small">Small</option>
+                <option value="Large">Large</option>
+            </select>
+            No. Sugars:
+            <select name="sugars" id='sugars<%%= id %><%%= qty %>'>
+                <option value='0'>0</option>
+                <option value='1'>1</option>
+                <option value='2'>2</option>
+                <option value='3'>3</option>
+            </select>
+            Milk:
+            <select name="milk" id='milk<%%= id %><%%= qty %>'>
+                <option value="Full Cream">Full Cream</option>
+                <option value="Light">Light</option>
+                <option value="Soy">Soy</option>
+                <option value="Almond">Almond</option>
+            </select>
+        </li>
 
 </script>
