Made some headway with the 'choose your type' screen

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,11 +2,31 @@
 
 <div id="main"></div>
 
+
 <script type="text/template" id='appViewTemplate'>
 
-    <button id='show-cafes-btn'>Show Cafes in my Area</button>
+  <button id='customer-btn'>I am a Customer</button>
+  <button id='store-btn'>I am a Cafe</button>
+  <button id='runner-btn'>I Deliver Coffee</button>
 
 </script>
+
+
+
+<script type="text/template" id='customerViewTemplate'>
+
+  <p>Hello. We aim to help you get coffee delieved to you from cafes in your area.</p>
+
+  <p>To do this successfully we need to know where you are.</p>
+
+  <p></p>
+
+<!--
+    <button id='show-cafes-btn'>Show Cafes in my Area</button> -->
+
+</script>
+
+
 
 <script type="text/template" id='StoreListViewTemplate'>
 
