--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,19 +26,20 @@
 
 <script type="text/template" id='OrderViewTemplate'>
 
-
 </script>
 
 <script type="text/template" id='OrderListViewTemplate'>
+    <div class="listContainer">
+    <h3>Order List</h3>
     <p>Store ID: <%%= store_id %></p>
     <p>Customer ID: <%%= customer_id %></p>
     <p>Runner ID: <%%= runner_id %></p>
     <p>Total Price: <%%= total_price %></p>
+    </div>
 </script>
 
 <script type="text/template" id='MenuViewTemplate'>
         <h1>Menu List View</h1>
-
         <h3>Store Name: <%%= name %></h3>
         <h3>Address: <%%= address %></h3>
 
