--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,27 @@
 <div class="container">
-<% if @user.errors.any? %>
+    <% if @user.errors.any? %>
     <ol>
-      <% @user.errors.full_messages.each do |msg| %>
+        <% @user.errors.full_messages.each do |msg| %>
         <li><%=  msg %></li>
-      <% end %>
+        <% end %>
     </ol>
-<% end %>
+    <% end %>
 
-<%= form_for @user do |f| %>
-    <%= f.label :email %>
-    <%= f.email_field :email, :required => true %>
-
-    <%= f.label :password %>
-    <%= f.password_field :password, :required => true %>
-
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, :required => true %>
-    <%= f.submit "Sign Up" %>
-<% end %>
+    <%= form_for @user do |f|%>
+    <p class = "space">
+        <%= f.label :email%>
+        <%= f.email_field :email, :required => true,  class: 'form-control' %>
+    </p>
+    <p class = "space">
+        <%= f.label :password %>
+        <%= f.password_field :password, :required => true, class: 'form-control' %>
+    </p>
+    <p class = "space" >
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, :required => true, class: 'form-control'%>
+    </p>
+    <p class = "space">
+        <%= f.submit "Sign Up", :class => "btn btn-info" %>
+    </p>
+    <% end %>
 </div>
