map view working, added to store list view

--- a/app/assets/stylesheets/_bootstrap-includes.scss
+++ b/app/assets/stylesheets/_bootstrap-includes.scss
@@ -27,3 +27,10 @@ nav {
 .edit_user > input {
     display : block;
 }
+.hide {
+    display: none;
+}
+.toggleBtn {
+    width: 150px;
+    height: 30px;
+}
