--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,10 @@
     <head>
         <title>CoffeeRun</title>
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyB_YfZyv08gdx-1gVq2CdBwiTdmi4uyO5I"%>
         <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
         <%= csrf_meta_tags %>
+
     </head>
     <body>
         <nav class="navbar navbar-default">
