--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <h1>Welcome to Coffee Run</h1>
 
-<div id="main"></div>
+<div id="main">
+</div>
 
 <script type="text/template" id='appViewTemplate'>
 
