--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -76,7 +76,12 @@
     <p>Store ID: <%%= store_id %></p>
     <p>Customer ID: <%%= customer_id %></p>
     <p>Total Price: $<%%= total_price %></p>
-    <button>Take Job</button>
+    <button class="buttonJobDetails">Show Job Details</button>
+    <button class="takeJob">Take Job</button>
+
+    <div class="showJobDetails">
+      
+    </div>
   </div>
 </script>
 
