--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,7 +57,8 @@
 <!--  -->
 
 <script type="text/template" id='OrderViewTemplate'>
-
+    <p><%%= id %></p>
+  </div>
 </script>
 
 <script type="text/template" id='OrderListViewTemplate'>
