--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -77,7 +77,7 @@
 </script>
 
 <script type="text/template" id='changeAddressButtonTemplate'>
-  <button id="addButton">Change Your Address</button>
+  <button id="changeAddressButton">Change Your Address</button>
 </script>
 
 
