app.showPrice converts floats into good looking prices, but no dollar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,21 +14,10 @@
 </script>
 
 <script type="text/template" id='locationDiscussionTemplate'>
-
-  <div id="message">
-
-  </div>
-  <div id="map">
-
-  </div>
-  <div id="address-form">
-
-  </div>
-
-  <div id="nav-buttons">
-
-  </div>
-
+  <div id="message"></div>
+  <div id="map"></div>
+  <div id="address-form"></div>
+  <div id="nav-buttons"></div>
 </script>
 
 
@@ -97,7 +86,7 @@
 </script>
 
 
-<!-- store menu view stuff -->
+<!-- store list view stuff -->
 
 <script type="text/template" id='StoreListViewTemplate'>
 
@@ -105,6 +94,7 @@
 
 </script>
 
+<!--  -->
 
 <script type="text/template" id='StoreViewTemplate'>
     <li class='store' id='<%%= id %>'>
@@ -114,8 +104,6 @@
     </li>
 
 </script>
-
-<!--  -->
 
 <script type="text/template" id='OrderViewTemplate'>
     <h2>This is the Order View</h2>
@@ -154,7 +142,7 @@
         <h3>Store Name: <%%= name %></h3>
         <h3>Address: <%%= address %></h3>
 
-        <p>Total Price: $<span id='menu-total-price'>0.0</span></p>
+        <p>Total Price: $<span id='menu-total-price'>0.00</span></p>
 
         <ul id='items-list'></ul>
         <button id='submit-order-btn'>Submit</button>
@@ -171,7 +159,7 @@
         <button class='change-qty' id='-<%%= id %>'>-</button>
         <box class='item-qty' id='qty<%%= id %>'>0</box>
         <button class='change-qty' id='+<%%= id %>'>+</button>
-        <p>Total Price: $<span id='<%%= id %>-total-price'>0.0</span></p>
+        <p>Total Price: $<span id='<%%= id %>-total-price'>0.00</span></p>
         <ul id='item-submenu-<%%= id %>'></ul>
     </li>
 
