--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -112,7 +112,7 @@
 <script type="text/template" id='StoreOrderListViewTemplate'>
   <div class="order-view-list-item" id="<%%= id %>">
     <p>Store Name: <%%= storeName %></p>
-    <p>Store ID: <%%= store_id %></p>
+    <p>Runner ID: <%%= runner_id %></p>
     <p>Customer Name: <%%= customerName %></p>
     <p><%%= allLines %></p>
     <p>Total Price: $<%%= total_price %></p>
@@ -122,6 +122,7 @@
 
 <script type="text/template" id='RunnerOrderListViewTemplate'>
   <div class="order-view-list-item" id="<%%= id %>">
+    <p>Status: <%%= status %></p>
     <p>Store ID: <%%= storeName %></p>
     <p>Customer ID: <%%= customerName %></p>
     <p><%%= allLines %></p>
@@ -133,6 +134,17 @@
     <div class="showJobDetails">
 
     </div>
+
+  </div>
+</script>
+
+<script type="text/template" id='CustomerOrderListViewTemplate'>
+  <div class="order-view-list-item" id="<%%= id %>">
+    <p>Status: <%%= status %></p>
+    <p>Store ID: <%%= storeName %></p>
+    <p>Customer ID: <%%= customerName %></p>
+    <p><%%= allLines %></p>
+    <p>Total Price: $<%%= total_price %></p>
 
   </div>
 </script>
