added view orders button to store page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,6 +69,10 @@
   <button id="changeAddressButton">Change Your Address</button>
 </script>
 
+<script type="text/template" id='viewOrdersButtonTemplate'>
+  <button id="viewOrdersButton">View Orders</button>
+</script>
+
 
 <script type="text/template" id='manualAddressTemplate'>
   <div class="manual">
