--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -118,8 +118,13 @@
 <!--  -->
 
 <script type="text/template" id='OrderViewTemplate'>
-    <p><%%= id %></p>
-  </div>
+    <p> Store Name: <%%= StoreName %></p>
+    <p>Store Address: <%%= StoreAddress %></p>
+
+    <p>Customer Name: <%%= CustomerName %></p>
+    <p>Customer Address:  <%%= CustomerAddress  %></p>
+    
+    <p> Total Price: <%%= TotalPrice %></p>
 </script>
 
 <script type="text/template" id='OrderListViewTemplate'>
