Order views rendering

--- a/app/assets/stylesheets/_bootstrap-includes.scss
+++ b/app/assets/stylesheets/_bootstrap-includes.scss
@@ -59,6 +59,10 @@ nav {
   display: none;
 }
 
-#map-view {
-  margin-right: 50%;
+#main {
+  width: 100% !important;
+}
+
+#map {
+  width: 100%;
 }
