--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -159,7 +159,7 @@
     <p>Customer ID: <%%= customerName %></p>
     <p><%%= allLines %></p>
     <p>Total Price: $<%%= total_price %></p>
-
+    <button class="customer-view-btn">Check My Order</button>
   </div>
 </script>
 
