--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -145,9 +145,13 @@
     <p>Total Price: $<%%= total_price %></p>
 
     <button class='job-btn takeJob' id='job<%%= id %>'>Take Job</button>
-    <button class='order-btn buttonJobDetails' id='order<%%= id %>'>Show Job Details</button>
+    <button class='order-btn' id='order<%%= id %>'>Show Job Details</button>
 
     <div class="showJobDetails">
+      <p> Store Name: <%%= storeName %></p>
+
+      <p>Customer Name: <%%= customerName %></p>
+
 
     </div>
 
