status on order view

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -112,7 +112,7 @@
 <script type="text/template" id='OrderViewTemplate'>
     <p> Store Name: <%%= StoreName %></p>
     <p>Store Address: <%%= StoreAddress %></p>
-
+    <p>Status: <%%= Status %></p>
     <p>Customer Name: <%%= CustomerName %></p>
     <p>Customer Address:  <%%= CustomerAddress  %></p>
 
