store path finalised

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -152,7 +152,7 @@
     <p>Customer Name: <%%= customerName %></p>
     <p><%%= allLines %></p>
     <p>Total Price: $<%%= app.showPrice(total_price) %></p>
-    <button class="pickup-btn">Ready for Pick Up</button>
+    <button class="ready-pickup-btn" id='pickup-<%%= id %>'>Ready for Pick Up</button>
   </div>
 </script>
 
