--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="sign-up-form">
     <% if @user.errors.any? %>
     <ol>
         <% @user.errors.full_messages.each do |msg| %>
@@ -24,4 +25,5 @@
         <%= f.submit "Sign Up", :class => "btn btn-info" %>
     </p>
     <% end %>
+  </div>
 </div>
