Added a few extra css stuff

--- a/app/assets/stylesheets/_bootstrap-includes.scss
+++ b/app/assets/stylesheets/_bootstrap-includes.scss
@@ -192,6 +192,7 @@ div#main{
 
 .btn-container {
   display: inline-block;
+  padding: 10px;
 }
 
 
@@ -239,6 +240,21 @@ div#main{
 
 }
 
+.quantity-button {
+  text-transform: none;
+  width: 60px;
+  height: 30px;
+  background: white;
+  border: 1px #fff;
+  box-shadow: 0 6px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 12px 0 rgba(0, 0, 0, 0.12);
+  font-size: 16pt;
+  margin: 10px;
+}
+
+.menu-container {
+  text-align: left;
+}
+
 .orderClickButton {
   text-transform: none;
   width: 180px;
@@ -249,6 +265,14 @@ div#main{
   font-size: 16pt;
   margin-bottom: 20px;
   margin-bottom: 20px;
+}
+
+#address-input{
+  width: 180px;
+  height: 69px;
+  text-align: center;
+  border: 3px solid #83BFFC;
+  font-size: 13pt;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
